--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,11 @@ body {
   font-family: "Roboto", sans-serif;
   margin-left: auto;
   margin-right: auto;
+  width: 1600px;
+}
+.bodyclass {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1,
@@ -27,7 +32,9 @@ img {
   display: block;
 }
 .container {
-  width: 1600px;
+  width: 1200px;
+  margin: auto;
+  padding: auto;
 }
 .header .container {
   display: flex;
@@ -54,8 +61,7 @@ img {
 .header-phone:hover,
 .localization:hover,
 .footer-mail:hover,
-.footer-phone:hover,
-.nav-buttons:hover {
+.footer-phone:hover {
   color: var(--buttons-color);
 }
 .nav-agency:focus,
@@ -66,9 +72,13 @@ img {
 .header-phone:focus,
 .localization:focus,
 .footer-mail:focus,
-.footer-phone:focus,
-.nav-buttons:focus {
+.footer-phone:focus {
   color: red;
+}
+.nav-buttons:focus,
+.nav-buttons:hover {
+  background-color: var(--buttons-color);
+  color: var(--background-color2);
 }
 
 /* LOGO */
@@ -82,6 +92,9 @@ img {
   letter-spacing: 0.03em;
   color: var(--buttons-color);
   text-decoration: none;
+  margin-right: 93px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .logo-span {
@@ -99,19 +112,24 @@ img {
 .nav-list {
   list-style: none;
   color: var(--text-color-black);
+  display: flex;
+  align-items: center;
 }
 .nav-agency {
   text-decoration: none;
   color: var(--text-color-black);
+  margin-right: 46px;
 }
 
 .nav-portfolio {
   text-decoration: none;
   color: var(--text-color-black);
+  margin-right: 46px;
 }
 .nav-contact {
   text-decoration: none;
   color: var(--text-color-black);
+  margin-right: 371px;
 }
 .header-contact {
   font-weight: 500;
@@ -119,10 +137,12 @@ img {
   line-height: 16px;
   letter-spacing: 0.02em;
   list-style: none;
+  display: flex;
 }
 .header-mail {
   text-decoration: none;
   color: var(--gray-color);
+  margin-right: 50px;
 }
 .header-phone {
   text-decoration: none;
@@ -132,7 +152,17 @@ img {
 /* ARTICLE "EFEKTYWNE ROZWIAZANIA" */
 
 .article {
+  width: 1600px;
   background-color: var(--gray-backgound-color);
+  height: 600px;
+  top: 80px;
+}
+.article-title {
+  width: 696px;
+  height: 120px;
+  right: 452px;
+  top: 280px;
+  position: absolute;
 }
 .h1 {
   font-weight: 900;
@@ -149,7 +179,6 @@ img {
   line-height: 30px;
   color: var(--text-color-white);
   background-color: var(--buttons-color);
-  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
@@ -157,25 +186,27 @@ img {
   border-radius: 4px;
   border: none;
   cursor: pointer;
-}
-
-.nav-buttons {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  width: 121px;
-  height: 38px;
-  background-color: var(--background-color2);
-  border: none;
-  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  margin-top: 30px;
 }
 
 /* SECTION 1 "LOREM" */
 
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .section1-list {
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  width: 1200px;
+  margin-top: 94px;
+  margin-left: 215px;
+  margin-right: 215px;
 }
 .section1-title {
   font-weight: 700;
